# mini-p2p

./: .env  Cargo.toml  README.md  benchmark_report.json  benchmark_summary.txt
config/: default.toml  development.toml  logging.yaml  production.toml
examples/: basic_usage.rs  benchmark.rs  custom_protocol.rs  file_sharing_demo.rs  network_simulation.rs  reliable_demo.rs
src/: lib.rs  main.rs
src/core/: config.rs  mod.rs  node.rs  peer.rs  protocol.rs
src/network/: connection.rs  discovery.rs  messaging.rs  mod.rs  nat.rs  transport.rs
src/network/dht/: contact.rs  dht_node.rs  mod.rs  node_id.rs  routing_table.rs  rpc.rs
src/storage/: chunk.rs  file_manager.rs  hash.rs  mod.rs  storage_engine.rs
src/transfer/: downloader.rs  mod.rs  scheduler.rs  swarm.rs  uploader.rs
src/utils/: crypto.rs  error.rs  logger.rs  metrics.rs  mod.rs  node_utils.rs  rate_limiter.rs
