[package]
name = "mini-p2p"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A mini P2P file sharing system like BitTorrent"
license = "MIT"
repository = "https://github.com/yourusername/mini-p2p"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4.41", features = ["serde"] }
socket2 = { version = "0.5", features = ["all"] }  # ✅ Add "all" feature

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"
